Updated some changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "workbench.iconTheme": "fira-code-material-icon-theme",
+    "workbench.sideBar.location": "right"
 }
